update leo swagger with copy of current version
bad wip